--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -12,4 +12,4 @@ tasks:
   dependencyUpdates:
     desc: Show dependency updates
     cmds:
-      - go list -u -m -json all | go run github.com/psampaz/go-mod-outdated@v0.9.0 -update -direct
+      - go list -u -m -json all | go-mod-outdated -update -direct
